--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,9 @@ name = "pypi"
 [packages]
 django = "*"
 django-browser-reload = "*"
+django-environ = "*"
+dj-database-url = "*"
+gunicorn = "*"
 
 [dev-packages]
 
