--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,11 @@ django-browser-reload = "*"
 django-environ = "*"
 dj-database-url = "*"
 gunicorn = "*"
+django-htmx = "*"
+channels = "*"
+channels-redis = "*"
+redis = "*"
+
 
 [dev-packages]
 
